Fixed problem with url not wrapping and breaking container. Fix is only applied on all episodes page, so need to transfer code to home page js file. Also fixed problem of not uniform padding on episode description, did it by removing the xml p tags, so now all descriptions should be uniform. Also need to apply that fix to home page script tag. Adjusted author and pubDate placements on episode cards to just below episode title, with author on start and pubDate on end on same line. Once again fix only on home page, so need to apply change to all episode page. Added a google play button icon because for some reason on safari on play, pause still pops up as emoji, so might replace all buttons with google icon images, but on first try, click is not registering, probably because need to make icon image with id start and not the button div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,4 +94,9 @@ form {
     margin: 1rem;
 }
 
+section {
+    margin: 1rem;
+    word-break: break-word;
+}
+
 
